--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -12,6 +12,12 @@ With this context and data set, we are hoping to answer a variety of questions. 
 Though it is difficult to point to a single question that we may be able to answer using this dataset, we are confident that through thorough analysis of the Crime and Incarceration Data Set, we will be able to critically analyze the rhetoric that is often used to defend the US’ prison system and investigate common misconceptions regarding the root causes of crime and incarceration. 
 We will likely have to do research outside of this data set to create a strong narrative depending on which direction our project takes us. We have found an additional dataset which includes census data that could be used to find correlations between state and prison demographics. The exact trend or correlation that we will be investigating is not perfectly clear yet, research and analysis of this dataset will reveal interesting information about the US prison system.
 
+### Research Questions
+1) How do trends in different crimes compare to each other? (Do they move together or do they change indivisually?)
+2) How does crime differ for different regions of the US? (Make a color coded US map)
+3) Is there a relationship between proportion of population incarcerated and party affiliation in American states?
+4) How does policy impact incarceration? (an example of this is the changing definition of rape)
+
 ### Data Description
 “The Bureau of Justice Statistics administers the National Prisoners Statistics Program (NPS), an annual data collection effort that began in response to a 1926 congressional mandate. The Uniform Crime Report (UCR) has served as the FBI's primary national data collection tool since a 1930 congressional mandate directed the Attorney General to ‘acquire, collect, classify, and preserve identification, criminal identification, crime, and other records.’ The FBI collects this information voluntarily submitted by local, state, and federal law enforcement agencies.” The user who updated this dataset used the raw data from the NPS and wrangled it in python to create the variables and observations. 
 Within the dataset there are 816 rows and 17 variables. The variables included in the set are US state, whether or not the data for that entry includes jails, the year, prisoner count on December 31st, whether or not the state in the data entry changed their system for reporting crime in comparison to previous years, whether or not crime totals are estimated, and numbers of: total state population, violent crimes, murders or manslaughters, rapes (using the old definition), rapes (using the new definition), robberies, aggravated assaults, property crime, burglaries, larceny, and vehicle theft. 
@@ -245,7 +251,7 @@ ggplot(data = crime_props, mapping = aes(x = year)) +
                 Orange = Proportion of larceny
                 Magenta = Proportion of vehicle theft")
 ```
-```{r proportion-of-crimes-including-larcency-2, echo = FALSE}
+```{r proportion-of-crimes-including-larcency-2, echo = FALSE, warning=FALSE, message=FALSE}
 ggplot(data = crime_props, mapping = aes(x = year)) +
   geom_line(aes(y = total_rape_legacy_prop), color = "red", linetype="twodash") +
   geom_line(aes(y = total_murder_manslaughter_prop), color = "blue",linetype="twodash") +
@@ -290,7 +296,7 @@ smallest proportion.
 ### Crime by year
 
 
-```{r new-dataset, echo = FALSE}
+```{r new-dataset, echo = FALSE, warning=FALSE, message=FALSE}
 totals_by_year <- state_crime %>%
   group_by(year) %>%
   summarise(violent_crime_total = sum(violent_crime_total),
