--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -8,19 +8,41 @@ output: pdf_document
 ### Introduction
 The United States currently has the highest prison population in the world at around 2,094,000. This situation can be traced back to the 1970s, when politicians like Richard Nixon, Ronald Reagan, and more began the War on Drugs and began promoting “tough on crime” agendas. All this is despite scholars of the time believing prisons might have been abolished entirely, as crime and imprisonment rates were at an all time low. Mass incarceration has resulted in many racial disparities—  disproportionately affecting Black men in particular. These racial disparities are functionally seen by many as modern-day Jim Crow laws which were outlawed in the 1960s.
 Rates of imprisonment have continued to increase under the guise of “public safety.” However, the reality is that the US’s crime rates are comparable to countries with similar economies, yet the rate of incarceration is significantly higher. The US has only 5% of the world’s population, and yet it houses 25% of the world’s incarcerated persons. The racial, social, and economic implications of this statistic are what we intend to explore in this project. 
-With this context and data set, we are hoping to answer a variety of questions. Namely, what trends can we find in the data? Can we point to specific policy that might have caused the imprisonment rates to be as high or as low as they are in a specific year? Is there evidence to suggest that higher rates of imprisonment do create safety, whether by deterring crime or by severely punishing it? Does a state’s (typical) party affiliation affect their rate of incarceration, or is this an issue that goes beyond party lines? Are states with a high percentage of people of color more prone to higher rates of incarceration? 
+
+With this context and data set, we are hoping to answer a variety of questions such as the following :
+
+1) Is there a relationship between proportion of population incarcerated and party affiliation in American states?
+2) How does policy impact incarceration? This will be explored through the lens of changing definition of rape
+3) How do trends in different crimes compare to each other? Do they move together or do they change individually?
+4) How does crime differ for different regions of the US?
+
 Though it is difficult to point to a single question that we may be able to answer using this dataset, we are confident that through thorough analysis of the Crime and Incarceration Data Set, we will be able to critically analyze the rhetoric that is often used to defend the US’ prison system and investigate common misconceptions regarding the root causes of crime and incarceration. 
 We will likely have to do research outside of this data set to create a strong narrative depending on which direction our project takes us. We have found an additional dataset which includes census data that could be used to find correlations between state and prison demographics. The exact trend or correlation that we will be investigating is not perfectly clear yet, research and analysis of this dataset will reveal interesting information about the US prison system.
-
-### Research Questions
-1) How do trends in different crimes compare to each other? (Do they move together or do they change indivisually?)
-2) How does crime differ for different regions of the US? (Make a color coded US map)
-3) Is there a relationship between proportion of population incarcerated and party affiliation in American states?
-4) How does policy impact incarceration? (an example of this is the changing definition of rape)
 
 ### Data Description
 “The Bureau of Justice Statistics administers the National Prisoners Statistics Program (NPS), an annual data collection effort that began in response to a 1926 congressional mandate. The Uniform Crime Report (UCR) has served as the FBI's primary national data collection tool since a 1930 congressional mandate directed the Attorney General to ‘acquire, collect, classify, and preserve identification, criminal identification, crime, and other records.’ The FBI collects this information voluntarily submitted by local, state, and federal law enforcement agencies.” The user who updated this dataset used the raw data from the NPS and wrangled it in python to create the variables and observations. 
 Within the dataset there are 816 rows and 17 variables. The variables included in the set are US state, whether or not the data for that entry includes jails, the year, prisoner count on December 31st, whether or not the state in the data entry changed their system for reporting crime in comparison to previous years, whether or not crime totals are estimated, and numbers of: total state population, violent crimes, murders or manslaughters, rapes (using the old definition), rapes (using the new definition), robberies, aggravated assaults, property crime, burglaries, larceny, and vehicle theft. 
+
+### Methodology
+
+The following variables, from the original dataset, were used to address the research questions above:\newline
+* **year**:\newline
+* **prisoner_count**:\newline
+* **state_population**:\newline
+* **violent_crime_total**:\newline
+* **murder_manslaughter**:\newline
+* **rape_legacy**:\newline
+* **rape_revised**:\newline
+* **robbery**:\newline
+* **agg_assault**:\newline
+* **property_crime_total**:\newline
+* **burglary**:\newline
+* **larceny**:\newline
+* **vehicle_theft**:\newline
+* **total_prisoner**:\newline
+* **total_violent_crime**:\newline
+* **total_crime**:\newline
+
 
 \newpage
 
@@ -67,7 +89,8 @@ state_crime <- state_crime %>%
 
 
 
-
+### Research Question #1 
+### Is there a relationship between proportion of population incarcerated and party affiliation in American states?
 
 Political rhetoric that has come to the forefront in recent decades is the idea 
 of law and order, being tough on crime, and ensuring punishment to the fullest 
@@ -93,8 +116,8 @@ crime <- crime %>%
 Above is the total prisoners in all 50 US states from 2001 to 2016. The graph 
 shows a steady incline from 2001 to 2008 and then a steady decline followed by a 
 sharp decline thereafter. Drawing attention to the range of the y-axis, we can 
-see thar despite these sharp declines, the number of incarcerated individuals at 
-the lowest point was still above 1.19 million, which is still infinitely higher 
+see that despite these sharp declines, the number of incarcerated individuals at 
+the lowest point was still above 1.19 million, which is still much higher 
 than the rate of incarceration in other countries.
 
 ```{r total-violent-crime, echo = FALSE}
@@ -136,6 +159,7 @@ crime<- crime %>%
  crime %>%
   ggplot(crime, mapping= aes(x=year, y=total_crime))+
   geom_line()+
+  scale_y_continuous(name="Count", labels = scales::comma) +
   labs(title = "Total Crime in the US",
   x = "Year", y = "Count") +
   theme_linedraw()
@@ -153,6 +177,10 @@ how much or how little crime is being committed and is instead due to other
 factors which we will explore later in our analyses. Possible explanations might 
 be policy changes, new sentencing guidelines, amount of policing, and a plethora 
 of other reasons.
+
+
+###Wouldn't this show a correlation between decreasing incarceration and decreasing crime rates?
+
 
 
 ```{r percent-pop, echo = FALSE}
@@ -175,7 +203,10 @@ US Prison Population graph. However, that being said, even if the population is
 increasing, if the crime rate is staying the same, or decreasing as we observed
 previously, there is still no valid reason to incarcerate more people.
 
-### Steven
+###I feel like this doesn't answer the question above, so change the question or add political stuff?
+
+### Research Question #2 
+### How does policy impact incarceration? This will be explored through the lens of changing definition of rape
 
 ### Impact of Changing the Definition of Rape
 ```{r creation-of-rape-data-set, echo = FALSE}
@@ -280,6 +311,9 @@ ggplot(data = crime_props, mapping = aes(x = year)) +
                 Orange = Proportion of larceny
                 Magenta = Proportion of vehicle theft")
 ```
+
+###STEVEN CAN YOU FIX THIS GRAPH TO NOT HAVE COMMENT LOOK WEIRD?
+
 ```{r proportion-of-crimes-including-larcency-2, echo = FALSE, warning=FALSE, message=FALSE}
 ggplot(data = crime_props, mapping = aes(x = year)) +
   geom_line(aes(y = total_rape_legacy_prop), color = "red", linetype="twodash") +
@@ -312,18 +346,20 @@ ggplot(data = crime_props, mapping = aes(x = year)) +
             (not including federal incarcerated people)")
 ```
 We wanted to see how the proportions of crimes were divided among the
-prion population. Also we wanted to see whether violent or non-violent crimes
+prior population. Also we wanted to see whether violent or non-violent crimes
 were represented more among the prison population. It appears that non violent
 crimes make up a larger proportion of the prison population than violent crimes.
-Generally, violent and non-violent crimes are decreasing the proportion of the
-prison population. Nonviolent crimes seem to be decreasing at a faster rate
-than violent crimes. Larceny makes up the largest proportion of crimes
-in the prison population. So we took it out for the second visualization
+Generally, violent and non-violent crimes are decreasing in regards to 
+proportion of the prison population. Nonviolent crimes seem to be decreasing at 
+a faster rate than violent crimes. Larceny makes up the largest proportion of 
+crimes in the prison population. So we took it out for the second visualization
 to get a better look at the other crimes. Murder and manslaughter make up the
 smallest proportion.
 
-### Crime by year
+###How does what you did tie into the original rape question you were finding answers to?
 
+### Research Question #3 
+### How do trends in different crimes compare to each other? Do they move together or do they change individually?
 
 ```{r new-dataset, echo = FALSE, warning=FALSE, message=FALSE}
 totals_by_year <- state_crime %>%
@@ -439,13 +475,17 @@ make objective claims about this data. One notable feature we noticed was that
 there was a peak for many crimes between 2004 and 2008. We plan to research 
 further to find possible causations for these trends.
 
+###Do the research^^?
+
 Last, we created linear models for each crime to see how they each changed
 between 2001 and 2016. Notice, all of these 7 crimes have a negative slope
 meaning they overall decreased during this time period. The slopes vary in 
 magnitude from about -7000 crimes/year to about -180,000 crimes/year.
 
 
-```{r crime-by-region}
+### Research Question #4
+### How does crime differ for different regions of the US?
+```{r crime-by-region, echo=FALSE, warning = FALSE, message = FALSE}
 
 crime <- crime %>%
   mutate(region = case_when(
@@ -500,8 +540,6 @@ crime <- crime %>%
   jurisdiction == "OREGON" ~ "West",
   jurisdiction == "WASHINGTON" ~ "West"))
 
-view(crime)
-
 year_crime<- crime %>%
   group_by(year, region) %>%
   summarise(total_burglary = sum(burglary, na.rm = T),
@@ -511,8 +549,6 @@ year_crime<- crime %>%
 
 year_crime <- year_crime %>%
   filter(!is.na(region))
-
-view(year_crime)
 
 
 ggplot(year_crime, aes(x=year)) +
@@ -527,6 +563,43 @@ ggplot(year_crime, aes(x=year)) +
   scale_y_continuous(name="Number of Crimes", labels = scales::comma) +
   labs(title = "Yearly Crime by Region in the United States")
 
-```
+view(crime)
 
+```
+To see how crime differs by region, we made a variable called `region` which 
+splits up the United States into 4 distinct regions (North Central, Northeast, 
+South, and West). We decided to look at only property crime (burglary, larceny, 
+and vehicle theft) and so we plotted the total buglary, total larceny, total 
+vehicle theft, and overall total property crime from 2000-2016 on each regional 
+graph to see what the trends looked like. 
+
+One positive note with these graphs is that each region has a overall general 
+decline in the amount of property crime throughout 2000-2016. This is only a 
+speculation, but this would suggest that trends of property crime does 
+not differ throughout each region but it does for each crime. 
+
+The south overwhelmingly has the total highest property crime total burglary, 
+and total larceny.
+
+An outlier seems to be in the northeast graph in 2015 when there was sharp 
+decrease with larceny and burglary, and thus total property crime. There must
+have been policy that affected the Northeast only during that time period
+that lessened crime
+
+Because of the high number of crimes in the south and the downward spime for 
+the northwest graph that the north central and west regions are most similar
+in numbers of crimes committed over this 16 year span. 
+
+It is also interesting to see that the types of crimes themselves are 
+seemingly related. But this we mean that for each graph, from the highest number
+to the lowest number, the crimes are larceny, burglary, then vehicle theft. 
+
+If you were looking at a region to live in the united states and buy a house or 
+car, it seems that the best place to do that would be in the North East, 
+followed closely by the north central and west region. Thus it would be advised 
+to not choose the south, although they are on a decline in property crimes 
+committed. 
+
+
+###Should we ask Yue if it's ok to have multiple research questions that are seperate or do we need to tie them together with one central one?
 
