--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -1,13 +1,31 @@
 ---
-title: "Final Project:"
-subtitle: "American Crime and Incarceration"
-author: "PS I Love Yue: Oliver, Karam, Steven, Emely"
+title: "American Crime and Incarceration"
+subtitle: "STA 199 Final Project"
+author: "Oliver Greenwald, Karam Oubari, Steven Powell, Emely Gutierrez"
 output: pdf_document
 ---
 
+### Synoposis
+This research project is aimed to further understand and analyze American prison
+incarceration and crime in the 50 states between 2001 and 2016. 
+
+
 ### Introduction
-The United States currently has the highest prison population in the world at around 2,094,000. This situation can be traced back to the 1970s, when politicians like Richard Nixon, Ronald Reagan, and more began the War on Drugs and began promoting “tough on crime” agendas. All this is despite scholars of the time believing prisons might have been abolished entirely, as crime and imprisonment rates were at an all time low. Mass incarceration has resulted in many racial disparities—  disproportionately affecting Black men in particular. These racial disparities are functionally seen by many as modern-day Jim Crow laws which were outlawed in the 1960s.
-Rates of imprisonment have continued to increase under the guise of “public safety.” However, the reality is that the US’s crime rates are comparable to countries with similar economies, yet the rate of incarceration is significantly higher. The US has only 5% of the world’s population, and yet it houses 25% of the world’s incarcerated persons. The racial, social, and economic implications of this statistic are what we intend to explore in this project. 
+The United States currently has the highest prison population in the world at 
+around 2,094,000. This situation can be traced back to the 1970s, when 
+politicians like Richard Nixon, Ronald Reagan, and more began the War on Drugs 
+and began promoting “tough on crime” agendas. All this is despite scholars of 
+the time believing prisons might have been abolished entirely, as crime and 
+imprisonment rates were at an all time low. Mass incarceration has resulted in 
+many racial disparities, disproportionately affecting Black men in particular. 
+These racial disparities are functionally seen by many as modern-day Jim Crow 
+laws which were outlawed in the 1960s.
+
+Rates of imprisonment have continued to increase under the guise of “public 
+safety.” However, the reality is that the US’ crime rates are comparable to 
+countries with similar economies, yet the rate of incarceration is significantly 
+higher. The US has only 5% of the world’s population, and yet it houses 25% of 
+the world’s incarcerated persons.
 
 With this context and data set, we are hoping to answer a variety of questions such as the following :
 
@@ -16,54 +34,67 @@ With this context and data set, we are hoping to answer a variety of questions s
 3) How do trends in different crimes compare to each other? Do they move together or do they change individually?
 4) How does crime differ for different regions of the US?
 
-Though it is difficult to point to a single question that we may be able to answer using this dataset, we are confident that through thorough analysis of the Crime and Incarceration Data Set, we will be able to critically analyze the rhetoric that is often used to defend the US’ prison system and investigate common misconceptions regarding the root causes of crime and incarceration. 
-We will likely have to do research outside of this data set to create a strong narrative depending on which direction our project takes us. We have found an additional dataset which includes census data that could be used to find correlations between state and prison demographics. The exact trend or correlation that we will be investigating is not perfectly clear yet, research and analysis of this dataset will reveal interesting information about the US prison system.
+
 
 ### Data Description
-“The Bureau of Justice Statistics administers the National Prisoners Statistics Program (NPS), an annual data collection effort that began in response to a 1926 congressional mandate. The Uniform Crime Report (UCR) has served as the FBI's primary national data collection tool since a 1930 congressional mandate directed the Attorney General to ‘acquire, collect, classify, and preserve identification, criminal identification, crime, and other records.’ The FBI collects this information voluntarily submitted by local, state, and federal law enforcement agencies.” The user who updated this dataset used the raw data from the NPS and wrangled it in python to create the variables and observations. 
-Within the dataset there are 816 rows and 17 variables. The variables included in the set are US state, whether or not the data for that entry includes jails, the year, prisoner count on December 31st, whether or not the state in the data entry changed their system for reporting crime in comparison to previous years, whether or not crime totals are estimated, and numbers of: total state population, violent crimes, murders or manslaughters, rapes (using the old definition), rapes (using the new definition), robberies, aggravated assaults, property crime, burglaries, larceny, and vehicle theft. 
+“The Bureau of Justice Statistics administers the National Prisoners Statistics 
+Program (NPS), an annual data collection effort that began in response to a 1926 
+congressional mandate. The Uniform Crime Report (UCR) has served as the FBI's 
+primary national data collection tool since a 1930 congressional mandate 
+directed the Attorney General to ‘acquire, collect, classify, and preserve 
+identification, criminal identification, crime, and other records.’ The FBI
+collects this information voluntarily submitted by local, state, and federal
+law enforcement agencies.” The user who updated this dataset used the raw data 
+from the NPS and wrangled it in python to create the variables and observations. 
+Within the data set there are 816 rows and 17 variables. The variables included 
+in the set are US state, whether or not the data for that entry includes jails, 
+the year, prisoner count on December 31st, whether or not the state in the data 
+entry changed their system for reporting crime in comparison to previous years, 
+whether or not crime totals are estimated, and numbers of: total state 
+population, violent crimes, murders or manslaughters, rapes (using the old 
+definition), rapes (using the new definition), robberies, aggravated assaults, 
+property crime, burglaries, larceny, and vehicle theft. 
 
 ### Methodology
 
-The following variables, from the original dataset, were used to address the research questions above:\newline
-* **year**:\newline
-* **prisoner_count**:\newline
-* **state_population**:\newline
-* **violent_crime_total**:\newline
-* **murder_manslaughter**:\newline
-* **rape_legacy**:\newline
-* **rape_revised**:\newline
-* **robbery**:\newline
-* **agg_assault**:\newline
-* **property_crime_total**:\newline
-* **burglary**:\newline
-* **larceny**:\newline
-* **vehicle_theft**:\newline
-* **total_prisoner**:\newline
-* **total_violent_crime**:\newline
-* **total_crime**:\newline
-
-
-\newpage
+The following variables, from the original dataset, were used to address the 
+research questions above:\newline
+• `jurisdiction`: a categorical variable for federal jurisdiction and the 50 
+states. \newline
+• `year`: a numerical variable for the year of each observation, 2001 through 
+2016. \newline 
+• `prisoner_count`:a numerical variable for the number of prisoners. \newline
+• `state_population`: a numerical variable for the population of each state
+in a given year. \newline
+• `violent_crime_total`: a numerical variable for the number of violent cr\newline
+• `murder_manslaughter`:\newline
+• `rape_legacy`:\newline
+• `rape_revised`:\newline
+• `robbery`:\newline
+• `agg_assault`:\newline
+• `property_crime_total`:\newline
+• `burglary`:\newline
+• `larceny`:\newline
+• `vehicle_theft`:\newline
+• `total_prisoner`:\newline
+• `total_violent_crime`:\newline
+• `total_crime`:\newline
 
 ```{r packages-data, echo = FALSE, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(broom)
 library(sf)
-crime <- read_csv("data/crime_and_incarceration_by_state.csv") 
 ```
 
-
-```{r state_crime, echo = FALSE}
+```{r state_crime, echo = FALSE, warning=FALSE, message=FALSE}
+crime <- read_csv("data/crime_and_incarceration_by_state.csv") 
 
 federal_crime <- crime %>%
   filter(jurisdiction == "FEDERAL")
 
 state_crime <- crime %>%
   filter(jurisdiction != "FEDERAL")
-
 ```
-
 
 ```{r prisoner-prop-map, echo = FALSE}
 prop_pris_2001 <- state_crime %>%
@@ -72,18 +103,16 @@ prop_pris_2001 <- state_crime %>%
   mutate(region = tolower(jurisdiction)) %>%
   select(region, prisoner_per_pop)
 
-
 states_map <- map_data("state")
 prop_map_2001 <- left_join(states_map, 
                            prop_pris_2001, 
                            by = "region" )
 
-
 ggplot(prop_map_2001, aes(x = long, y = lat, group = group)) +
   geom_polygon(aes(fill = prisoner_per_pop)) +
-  scale_fill_viridis_c(option = "B") + 
-  labs(title = "2001 Prisoner Proportions")
-
+  scale_fill_viridis_c(option = "B", direction=-1) + 
+  labs(title = "2001 Prisoner Proportions",
+       fill = "Number of prisoners per person")
 
 prop_pris_2016 <- state_crime %>%
   filter(year == 2016) %>%
@@ -91,17 +120,16 @@ prop_pris_2016 <- state_crime %>%
   mutate(region = tolower(jurisdiction)) %>%
   select(region, prisoner_per_pop)
 
-
 states_map <- map_data("state")
 prop_map_2016 <- left_join(states_map, 
                            prop_pris_2016, 
                            by = "region" )
 
-
 ggplot(prop_map_2016, aes(x = long, y = lat, group = group)) +
   geom_polygon(aes(fill = prisoner_per_pop)) +
-  scale_fill_viridis_c(option = "B") + 
-  labs(title = "2016 Prisoner Proportions")
+  scale_fill_viridis_c(option = "B", direction=-1) + 
+  labs(title = "2016 Prisoner Proportions",
+       fill = "Number of prisoners per person")
 ```
 
 
@@ -126,8 +154,10 @@ crime <- crime %>%
  crime %>%
   ggplot(crime, mapping= aes(x=year, y=total_prisoner))+
   geom_line()+
-  labs(title = "Total US Prisoners",
-  x = "Year", y = "Count") +
+  labs(title = "Total US Prisoners", 
+       subtitle = "between 2001 and 2016",
+       x = "Year", 
+       y = "Count") +
   theme_linedraw()
 ```
 Above is the total prisoners in all 50 US states from 2001 to 2016. The graph 
@@ -138,7 +168,7 @@ the lowest point was still above 1.19 million, which is still much higher
 than the rate of incarceration in other countries.
 
 ```{r total-violent-crime, echo = FALSE}
-crime<- crime %>%
+crime <- crime %>%
   filter(!is.na(violent_crime_total))%>%
   group_by(year)%>%
   mutate(total_violent_crime= sum(violent_crime_total))
@@ -152,7 +182,7 @@ crime<- crime %>%
 ```
 
 ```{r total-property-crime, echo = FALSE}
-crime<- crime %>%
+crime <- crime %>%
   filter(!is.na(property_crime_total))%>%
   group_by(year)%>%
   mutate(total_property_crime= sum(property_crime_total))
@@ -305,7 +335,7 @@ crime_props <- crime_props %>%
  
 ```
  
-```{r proportion-of-crimes-including-larcency, echo = FALSE}
+```{r proportion-of-crimes-including-larcency, echo = FALSE, warning = FALSE, message = FALSE,}
 ggplot(data = crime_props, mapping = aes(x = year)) +
   geom_line(aes(y = total_rape_legacy_prop), color = "red",linetype="twodash") +
   geom_line(aes(y = total_murder_manslaughter_prop), color = "blue",linetype="twodash") +
